# tetris-game

./: .gitignore  CMakeLists.txt  README.md
include/: Board.hpp  Game.hpp  Renderer.hpp
server/: CMakeLists.txt
server/config/: app.example.yaml
server/sql/: schema.sql
server/src/app/: main.cpp
server/src/auth/: session.cpp  session.hpp
server/src/config/: config.cpp  config.hpp
server/src/controllers/: api_controller.cpp  api_controller.hpp
server/src/data/: database.cpp  database.hpp
server/src/models/: ranking_entry.hpp  user.hpp
server/src/repositories/: email_code_repository.cpp  email_code_repository.hpp  score_repository.cpp  score_repository.hpp  user_repository.cpp  user_repository.hpp
server/src/services/: api_result.hpp  auth_service.cpp  auth_service.hpp  mail.cpp  mail.hpp  score_service.cpp  score_service.hpp
server/web/: app.js  game.html  game.js  index.html  styles.css
src/: Board.cpp  Game.cpp  Renderer.cpp  main.cpp
